file(GLOB SRC
  ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp
)

ADD_LIBRARY(logger
  ${SRC}
)

SET_TARGET_PROPERTIES (
  logger
  PROPERTIES LINKER_LANGUAGE CXX
)

TARGET_INCLUDE_DIRECTORIES(logger PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}/include
  ${CMAKE_CURRENT_SOURCE_DIR}/include/logger
  )

set(logger_include_dirs ${logger_include_dirs} ${CMAKE_CURRENT_SOURCE_DIR}/include  PARENT_SCOPE)
install(TARGETS logger DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
